--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,98 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  box-sizing: border-box;
 }
+.page-title {
+  text-align: center;
 
-@media (prefers-color-scheme: dark) {
+  font-size: 3rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: #c2c1c1;
+  /* color: #433a45; */
+
+  animation-name: examples;
+  animation-duration: 0.3s;
+  animation-iteration-count: infinite;
+
+  /* text-shadow: 2px 8px 6px rgba(0, 0, 0, 0.2),
+      0px -5px 35px rgba(255, 255, 255, 0.3); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.slide-line-light {
+  background-image: linear-gradient(90deg, #433a45 2%, rgb(126 34 206) 98%);
+}
+.slide-line-dark {
+  background-image: linear-gradient(
+    90deg,
+    #afaeae 2%,
+    rgb(126 34 206) 98%
+  ) !important;
+}
+.slide-line {
+  width: 2%;
+  height: 3px;
+  animation-name: slideanimations;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
+  margin-top: 9px;
+}
+.slide-line2 {
+  width: 2%;
+  height: 3px;
+  animation-name: slideanimations;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
+  margin-top: 9px;
+}
+@keyframes slideanimations {
+  from {
+    width: 2%;
+  }
+  to {
+    width: 80%;
+  }
+}
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --radius: 0.5rem;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 7px;
+    height: 8px;
+  }
+
+  /* Track */
+  .scrollbar::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+  }
+
+  /* Handle */
+  .scrollbar::-webkit-scrollbar-thumb {
+    background-color: purple;
+    /* border-radius: 10px; */
+    /* background-image: linear-gradient(180deg, #d0368a 0%, #708ad4 99%);
+    box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5); */
+    border-radius: 100px;
+  }
+
+  /* Handle on hover */
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+  .scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: purple, #f1f1f1;
+  }
 }
