--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -283,3 +283,15 @@ body {
 
   /* background: #3b8686; */
 }
+
+.bubble::after {
+  content: "";
+  border-top-left-radius: 50% 100%;
+  border-top-right-radius: 50% 100%;
+  position: absolute;
+  bottom: 0;
+  z-index: -1;
+  width: 100%;
+  background-color: #0f0f10;
+  height: 85%;
+}
